--- a/.gitignore
+++ b/.gitignore
@@ -198,7 +198,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -219,4 +220,10 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
 
